[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
indicatif = { version = "0.17.2", features = ["rayon"] }
itertools = "0.10.5"
nalgebra = "0.31.4"
once_cell = "1.16.0"
pathfinding = "4.0.0"
rayon = "1.6.1"
regex = "1.7.0"
